Code Reformatted and Rearranged

--- a/app/src/main/res/layout/activity_add_new_quote.xml
+++ b/app/src/main/res/layout/activity_add_new_quote.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/colorBackground">
 
     <LinearLayout
@@ -8,66 +9,66 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/padding_large"
-        android:paddingTop="@dimen/padding_large"
-        android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/selectBook"
-        android:textSize="@dimen/readin_track_info"
-        android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/fixedTitleforUpdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
-    <Spinner
-        android:id="@+id/bookTitle_quotespinner"
-        android:layout_width="wrap_content"
-        android:focusedByDefault="true"
-        android:nextFocusDown="@id/quoteContent"
-        android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_marginTop="@dimen/padding_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/insertQuote"
-            android:textSize="@dimen/readin_track_info"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/quoteContent"
-            android:focusable="true"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginRight="@dimen/padding_large"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/padding_large"
+            android:paddingTop="@dimen/padding_large">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/selectBook"
+                android:textSize="@dimen/readin_track_info"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/fixedTitleforUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/bookTitle_quotespinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusedByDefault="true"
+                android:nextFocusDown="@id/quoteContent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_small"
+                android:text="@string/insertQuote"
+                android:textSize="@dimen/readin_track_info"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/quoteContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/padding_large"
+                android:focusable="true"
+                android:hint="@string/insertQuotehint" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/insertQuotehint" />
+            android:gravity="center"
+            android:paddingTop="@dimen/padding_large">
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/saveQuotekButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:text="@string/saveQuote"
+                android:textAlignment="center" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/padding_large"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/saveQuotekButton"
-            android:textAlignment="center"
-            android:focusable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/saveQuote" />
-
-    </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
