--- a/app/src/main/res/layout/activity_add_new_book.xml
+++ b/app/src/main/res/layout/activity_add_new_book.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/colorBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,29 +12,29 @@
         android:orientation="vertical">
 
         <TextView
-            android:paddingTop="@dimen/padding_large"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/padding_large"
             android:text="@string/add_new_book_message"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/bookTitleInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:hint="@string/search_book_hinte"
             android:focusable="auto"
-            android:nextFocusDown="@id/search_book_button"
-            android:inputType="text" />
+            android:hint="@string/search_book_hinte"
+            android:inputType="text"
+            android:nextFocusDown="@id/search_book_button" />
 
         <Button
             android:id="@+id/search_book_button"
             android:layout_width="wrap_content"
-            android:nextFocusDown="@id/saveBookButton"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/search_book"/>
+            android:nextFocusDown="@id/saveBookButton"
+            android:text="@string/search_book" />
 
         <LinearLayout
             android:id="@+id/BookResultsView"
