--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -1,67 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorBackground"
     android:orientation="horizontal"
-    android:padding="@dimen/padding_medium"
-    android:background="@color/colorBackground">
+    android:padding="@dimen/padding_medium">
 
-        <ImageView
-            android:id="@+id/bookImageLibrary"
-            android:layout_width="@dimen/bookImage"
-            android:layout_height="@dimen/bookImage"
-            android:contentDescription="bookCover" />
+    <ImageView
+        android:id="@+id/bookImageLibrary"
+        android:layout_width="@dimen/bookImage"
+        android:layout_height="@dimen/bookImage"
+        android:contentDescription="bookCover" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/padding_small"
-            android:paddingTop="@dimen/padding_small">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/padding_small"
+        android:paddingTop="@dimen/padding_small">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/book_title"
-                android:textColor="@android:color/black"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/book_title"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/bookTitleLibrary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                tools:text="Book Title" />
+        <TextView
+            android:id="@+id/bookTitleLibrary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            tools:text="Book Title" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/book_author"
-                android:textColor="@android:color/black"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/book_author"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/bookAuthorLibrary"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/black"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/bookAuthorLibrary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/number_of_pages"
-                android:textColor="@android:color/black"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/number_of_pages"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/bookPagesLibrary"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/black"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/bookPagesLibrary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black" />
     </LinearLayout>
+</LinearLayout>
 
 
 
