--- a/app/src/main/res/layout/my_library_details_activity.xml
+++ b/app/src/main/res/layout/my_library_details_activity.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorBackground">
 
     <LinearLayout
@@ -11,74 +10,74 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="@dimen/padding_medium">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/padding_medium">
 
-    <ImageView
-        android:id="@+id/bookImageLibrary"
-        android:layout_width="@dimen/bookImage"
-        android:layout_height="@dimen/bookImage"
-        android:contentDescription="bookCover" />
+            <ImageView
+                android:id="@+id/bookImageLibrary"
+                android:layout_width="@dimen/bookImage"
+                android:layout_height="@dimen/bookImage"
+                android:contentDescription="bookCover" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/padding_small"
-        android:paddingTop="@dimen/padding_small">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/padding_small"
+                android:paddingTop="@dimen/padding_small">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/book_title"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/bookTitleLibrary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    tools:text="Book Title" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/book_author"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/bookAuthorLibrary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/number_of_pages"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/bookPagesLibrary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/book_title"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/bookTitleLibrary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            tools:text="Book Title" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/book_author"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/bookAuthorLibrary"
-            android:layout_width="wrap_content"
-            android:textColor="@android:color/black"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/number_of_pages"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/bookPagesLibrary"
-            android:layout_width="wrap_content"
-            android:textColor="@android:color/black"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-</LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/padding_small"
             android:paddingLeft="@dimen/padding_medium"
-            android:textSize="@dimen/readin_track_info"
             android:text="@string/my_reading_tracks"
-            android:paddingBottom="@dimen/padding_small"/>
+            android:textSize="@dimen/readin_track_info" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/reading_track_recycler_view"
@@ -90,11 +89,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/padding_small"
             android:paddingLeft="@dimen/padding_medium"
             android:paddingTop="@dimen/padding_medium"
-            android:textSize="@dimen/readin_track_info"
             android:text="@string/myQuotes"
-            android:paddingBottom="@dimen/padding_small"/>
+            android:textSize="@dimen/readin_track_info" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/quotes_recycler_view"
@@ -104,21 +103,21 @@
             tools:listitem="@layout/reading_track_item" />
 
         <LinearLayout
-            android:padding="@dimen/padding_medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:padding="@dimen/padding_medium">
 
             <Button
                 android:id="@+id/deleteBookButton"
-                android:focusable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_light"
+                android:focusable="true"
                 android:paddingLeft="@dimen/padding_medium"
                 android:paddingRight="@dimen/padding_medium"
-                android:background="@android:color/holo_red_light"
                 android:text="@string/deleteButton"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white" />
         </LinearLayout>
 
     </LinearLayout>
