--- a/app/src/main/res/layout/widget_view.xml
+++ b/app/src/main/res/layout/widget_view.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/colorBackground"
-    >
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/padding_small"
         android:text="@string/widget_title"
-        android:textStyle="bold"
-        android:paddingBottom="@dimen/padding_small"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/widget_body_TV"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center"
-        android:textColor="@android:color/black"
         android:background="@android:color/white"
+        android:gravity="center"
         android:text="@string/noQuoteWidget"
-        />
+        android:textColor="@android:color/black" />
 </LinearLayout>
