--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/colorBackground">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/my_library"
-        android:title="@string/my_library"
-        />
+        android:title="@string/my_library" />
 
     <item
         android:id="@+id/my_reading_tracks"
-        android:title="@string/my_reading_tracks"
-        />
+        android:title="@string/my_reading_tracks" />
 
     <item
         android:id="@+id/my_quotes"
-        android:title="@string/myQuotes"
-        />
+        android:title="@string/myQuotes" />
 
 </menu>
