--- a/app/src/main/res/layout-v17/my_library_details_activity.xml
+++ b/app/src/main/res/layout-v17/my_library_details_activity.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/padding_small"
+                android:paddingStart="@dimen/padding_small"
                 android:paddingTop="@dimen/padding_small">
 
                 <TextView
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/padding_small"
-            android:paddingLeft="@dimen/padding_medium"
+            android:paddingStart="@dimen/padding_medium"
             android:text="@string/my_reading_tracks"
             android:textSize="@dimen/readin_track_info" />
 
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/padding_small"
-            android:paddingLeft="@dimen/padding_medium"
+            android:paddingStart="@dimen/padding_medium"
             android:paddingTop="@dimen/padding_medium"
             android:text="@string/myQuotes"
             android:textSize="@dimen/readin_track_info" />
@@ -114,8 +114,8 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_red_light"
                 android:focusable="true"
-                android:paddingLeft="@dimen/padding_medium"
-                android:paddingRight="@dimen/padding_medium"
+                android:paddingStart="@dimen/padding_medium"
+                android:paddingEnd="@dimen/padding_medium"
                 android:text="@string/deleteButton"
                 android:textColor="@android:color/white" />
         </LinearLayout>
