--- a/app/src/main/res/layout-v17/reading_track_item.xml
+++ b/app/src/main/res/layout-v17/reading_track_item.xml
@@ -14,13 +14,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/padding_medium">
+            android:paddingStart="@dimen/padding_medium">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_medium">
+                android:paddingStart="@dimen/padding_medium">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -32,14 +32,14 @@
                     android:id="@+id/TitleReadingtrackTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/padding_medium" />
+                    android:paddingStart="@dimen/padding_medium" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_medium">
+                android:paddingStart="@dimen/padding_medium">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -51,14 +51,14 @@
                     android:id="@+id/LocationReadingtrackTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/padding_medium" />
+                    android:paddingStart="@dimen/padding_medium" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_medium">
+                android:paddingStart="@dimen/padding_medium">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -70,14 +70,14 @@
                     android:id="@+id/DateReadingTrackTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/padding_medium" />
+                    android:paddingStart="@dimen/padding_medium" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_medium">
+                android:paddingStart="@dimen/padding_medium">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                     android:id="@+id/PagesReadingTrackTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/padding_medium" />
+                    android:paddingStart="@dimen/padding_medium" />
             </LinearLayout>
 
         </LinearLayout>
@@ -99,7 +99,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="@dimen/padding_medium"
+            android:layout_marginEnd="@dimen/padding_medium"
             android:layout_weight="1"
             android:focusable="true"
             android:text="@string/edit" />
